# medici-backend

./: .gitignore  docker-compose.yml
gateway/: pyproject.toml
gateway/api/: auth.py  user.py
gateway/api/users/: register.py
gateway/api/v1/users/: register.py
gateway/config/: fastapi.py  faststream.py  security.py  settings.py
gateway/dtos/: __init__.py  auth.py  error.py  rabbit_sync.py  user.py
gateway/exceptions/: __init__.py  auth.py  declarative.py
gateway/services/: __init__.py  auth.py  jwt.py  rabbit_sync.py
mails/: Dockerfile  pyproject.toml
mails/config/: faststream.py  jinja.py  settings.py  smtp.py
mails/constants/: __init__.py  mail_type.py
mails/dtos/: __init__.py  register.py  send_mail.py
mails/events/: register.py  send_mail.py
mails/services/: __init__.py  send_mail.py
mails/templates/: register.html
postgres/: create_databases.sh
transactions/: pyproject.toml
transactions/config/: db.py  faststream.py  settings.py
transactions/constants/: __init__.py  account.py  bank.py  currency.py  money.py
transactions/dtos/: __init__.py  account.py  pagination.py  transaction.py
transactions/events/: transaction.py
transactions/migrations/versions/: 2024-12-04_c4f2892f0153_.py
transactions/models/: __init__.py  account.py  category.py  transaction.py
transactions/repos/: abc.py  transaction.py
transactions/services/: __init__.py  transaction_list.py
users/: Dockerfile  pyproject.toml
users/config/: db.py  faststream.py  middlewares.py  security.py  settings.py
users/dtos/: __init__.py  auth.py  jwt.py  register.py  user.py
users/events/: auth.py  info.py  login.py  register.py
users/exceptions/: __init__.py  auth.py  confirmation_token.py  direct_reply_to.py  register.py  reply_to.py
users/migrations/: env.py
users/migrations/versions/: 2024-11-02_d3dd73220cec_.py
users/models/: base.py  user.py
users/services/: __init__.py  auth.py  confirmation_token.py  register.py
