[tool.poetry]
name = "transactions"
version = "0.1.0"
description = ""
authors = ["Vitaly Kotov <catvitalio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["cli", "rabbit"], version = "^0.5.30"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["A", "F", "B", "C", "I", "T", "Q", "COM"]
ignore = ["B904", "B008"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]
section-order = ["future", "standard-library", "first-party", "third-party", "src", "local-folder"]

[tool.ruff.lint.isort.sections]
src = ["config", "migrations", "tests", "src", "deps", "dtos", "events", "services", "exceptions", "constants", "models"]
